--- a/apps/stream-components/src/index.html
+++ b/apps/stream-components/src/index.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
-  <body class="bg-slate-100">
+  <body class="bg-transparent">
     <sc-root></sc-root>
   </body>
 </html>
